# fiorefactor

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
.github/workflows/: R-CMD-check.yaml
R/: extendr-wrappers.R  print.R
man/: Iom.Rd  Test.Rd  print.Iom.Rd
src/: Makevars.in  Makevars.wasm.in  Makevars.win.in  entrypoint.c  fiorefactor-win.def
src/rust/: Cargo.toml  vendor-config.toml
src/rust/src/: example.rs  iom.rs  leontief.rs  lib.rs
