[package]
name = 'fiorefactor'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'fiorefactor'

[dependencies]
extendr-api = {git = 'https://github.com/albersonmiranda/extendr.git', branch = 'methods-docs'}
rayon = '1.10.0'
num_cpus = '1.16.0'
faer = { version = '0.21.9', features = ['rayon'] }
